# CppDesign

./: .gitignore  AccInfo.txt  CMakeLists.txt  Goods.cpp  Goods.hpp  GoodsInfo.txt  MySocket.cpp  MySocket.hpp  Order.cpp  Order.hpp  Platform.cpp  Platform.hpp  PlatformShow.cpp  PlatformShow.hpp  README.md  User.cpp  User.hpp  main.cpp
.cache/clangd/index/: Ex1.cpp.807D5E76475EC4DC.idx  Ex1.hpp.EDB47DFA62C6C903.idx  Goods.cpp.D0EA2BB8A09A42EE.idx  Goods.hpp.2A3DCCE8823D01FB.idx  Platform.cpp.CDBFB192A961F850.idx  Platform.hpp.4C99738D46C38E76.idx  User.cpp.2D8266EEFC3B7A82.idx  User.hpp.7907F7B79EFCF93F.idx  global.cpp.985B2613A37C9FB3.idx  main.cpp.727ECE9CCD037F27.idx
backup/: AccInfo.txt  Ex1 copy.cpp  Ex1 copy.hpp  Ex1.cpp  Ex1.hpp  GoodsInfo.txt  goods.txt
